; ModuleID = '/home/carl/AnghaBench/8cc/extr_cpp.c_do_read_if.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_cpp.c_do_read_if.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cond_incl_stack = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @do_read_if to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_read_if(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @cond_incl_stack, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @make_cond_incl(i32 %4)
  %6 = call i32 @vec_push(i32 %3, i32 %5)
  %7 = load i32, i32* %2, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = call i32 (...) @skip_cond_incl()
  br label %11

11:                                               ; preds = %9, %1
  ret void
}

declare dso_local i32 @vec_push(i32, i32) #1

declare dso_local i32 @make_cond_incl(i32) #1

declare dso_local i32 @skip_cond_incl(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
